# models/user_basic.go
@@ -45,3 +45,8 @@ func DeleteUser(user *UserBasic) *gorm.DB {
 
 	return utils.DB.Delete(&user)
 }
+
+func UpdateUser(user *UserBasic) *gorm.DB {
+
+	return utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, PassWord: user.PassWord})
+}
